==> HUSTLYRM/HUST_Infantry_2023/F405_Chassis/SD/bsp_spi_sdcard.c <==
#include "main.h"
#include "stm32f4xx_spi.h"
#include "bsp_spi_sdcard.h"

static void GPIO_Configuration(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  SPI_InitTypeDef SPI_InitStructure;

  /*!< SD_SPI_CS_GPIO, SD_SPI_MOSI_GPIO, SD_SPI_MISO_GPIO, SD_SPI_DETECT_GPIO
       and SD_SPI_SCK_GPIO Periph clock enable */
  RCC_AHB1PeriphClockCmd(SD_CS_GPIO_CLK | SD_SPI_MOSI_GPIO_CLK |
                             SD_SPI_MISO_GPIO_CLK | SD_SPI_SCK_GPIO_CLK,
                         ENABLE);

  /*!< SD_SPI Periph clock enable */
  SD_SPI_APBxClock_FUN(SD_SPI_CLK, ENABLE);
  /*!< AFIO Periph clock enable */
  // RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);
  /*!< Remap SPI3 Pins */

  GPIO_PinAFConfig(SD_SPI_SCK_GPIO_PORT, SD_SPI_SCK_PinSource, SD_SPI_AF);
  GPIO_PinAFConfig(SD_SPI_MISO_GPIO_PORT, SD_SPI_MISO_PinSource, SD_SPI_AF);
  GPIO_PinAFConfig(SD_SPI_MOSI_GPIO_PORT, SD_SPI_MOSI_PinSource, SD_SPI_AF);
  // GPIO_PinAFConfig(GPIOB,GPIO_PinSource6,GPIO_AF_SPI3);

  /*!< Configure SD_SPI pins: SCK */
  GPIO_InitStructure.GPIO_Pin = SD_SPI_SCK_PIN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_Init(SD_SPI_SCK_GPIO_PORT, &GPIO_InitStructure);

  /*!< Configure SD_SPI pins: MOSI */
  GPIO_InitStructure.GPIO_Pin = SD_SPI_MOSI_PIN;
  GPIO_Init(SD_SPI_MOSI_GPIO_PORT, &GPIO_InitStructure);

  /*!< Configure SD_SPI pins: MISO */
  GPIO_InitStructure.GPIO_Pin = SD_SPI_MISO_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF; // GPIO_Mode_IN_FLOATING;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_Init(SD_SPI_MISO_GPIO_PORT, &GPIO_InitStructure);

  /*!< Configure SD_SPI_CS_PIN pin: SD Card CS pin */
  GPIO_InitStructure.GPIO_Pin = SD_CS_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_Init(SD_CS_GPIO_PORT, &GPIO_InitStructure);

  /*!< Configure SD_SPI_DETECT_PIN pin: SD Card detect pin */
  //  GPIO_InitStructure.GPIO_Pin = SD_DETECT_PIN;
  //  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
  //  GPIO_Init(SD_DETECT_GPIO_PORT, &GPIO_InitStructure);

  SD_CS_HIGH(); //防止发生片选

  /*!< SD_SPI Config */
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;                        // SPI_CPHA_2Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;                           //这里这个引脚没有用到，只要我手动把PB6拉低就能使能
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_64; // SPI_BaudRatePrescaler_2;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(SD_SPI, &SPI_InitStructure);

  //  SPI_I2S_ClearFlag(SD_SPI,SPI_I2S_IT_RXNE);
  //  SPI_I2S_ITConfig(SD_SPI,SPI_I2S_IT_RXNE,ENABLE);
  SPI_Cmd(SD_SPI, ENABLE); /*!< SD_SPI enable */
}

uint8_t SD_WriteByte(uint8_t Data)
{
  /*!< Wait until the transmit buffer is empty */
  while (SPI_I2S_GetFlagStatus(SD_SPI, SPI_I2S_FLAG_TXE) == RESET)
  {
  }

  /*!< Send the byte */
  SPI_I2S_SendData(SD_SPI, Data);
  // delay_us(8);
  /*!< Wait to receive a byte*/
  while (SPI_I2S_GetFlagStatus(SD_SPI, SPI_I2S_FLAG_RXNE) == RESET)
  {
    ;
  }

  /*!< Return the byte read from the SPI bus */
  return SPI_I2S_ReceiveData(SD_SPI);
}
